methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:17: error: not found: value setCouleurBross
  setCouleurBross(c1)
  ^