methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  faireFleur(Color.red)
  gauche();avance(3)
  faireFleur(Color.cyan)
  avance(2);droite();avance(3);gauche();gauche()
  faireFleur(Color.orange)
  avance(2);droite();avance(3);gauche();gauche()
  faireFleur(Color.pink)
  gauche();avance(3)
  faireFleur(Color.green)
  droite();avance(4);droite();droite()
  
}

def faireFleur(c1 : Color){
  droite()
  setCouleurBross(c1)
  baisseBrosse()
  leveBrosse()
  avance();gauche();avance()
  baisseBrosse()
  leveBrosse()
  avance();gauche();avance()
  baisseBrosse()
  leveBrosse()
  avance();gauche();avance()
  baisseBrosse()
  leveBrosse()
  gauche();avance()
  setCouleurBrosse(Color.yellow)
  baisseBrosse()
  leveBrosse()
 
}